--- a/style/word-order-randomizer.css
+++ b/style/word-order-randomizer.css
@@ -4,7 +4,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: aliceblue;
 }
-header,
+header {
+    margin:30px;
+}
 foot {
     margin:30px;
 }
